# omslagroute

./: .flake8  .gitignore  Jenkinsfile  Makefile  README.md  docker-compose.local.yml  docker-compose.yml  omslagroute-users.json
app/: .env  Dockerfile  fixtures.json  logging.py  package-lock.json  package.json  pyproject.toml  requirements.txt  uwsgi.ini  webpack.config.js  wsgi.py
app/assets/admin_css/: custom_admin.css
app/assets/js/: case-status.js  case.js  caseform.js  search-address.js
app/assets/js/vue/: CaseDossierNr.vue  CaseStatus.vue
app/assets/static/: custom_admin.css
app/certificates/: adp_rootca.crt
app/deploy/: docker-run.sh
app/deploy/test/: docker-compose.yml
app/settings/: azure_settings.py  azure_settings_storage.py  logging.py  settings.py
app/static_src/sass/: main.scss
app/static_src/sass/basics/: _01_fonts.scss  _04_helper-classes.scss  _05_typography.scss  _06_site-layout.scss  _07_forms.scss  _08_tables.scss  _09_print.scss  _index.scss
app/static_src/sass/components/: _alert.scss  _breadcrumb.scss  _buttons.scss  _details.scss  _elements.scss  _footer.scss  _icons.scss  _index.scss  _modal.scss  _pagination.scss  _prompt.scss  _suggestions.scss  (+2 more)
app/web/: urls.py
app/web/alerts/: admin.py  context_processors.py  models.py
app/web/cases/: admin.py  forms.py  managers.py  models.py  statics.py  urls.py  views.py  viewsets.py
app/web/core/: context_processors.py  models.py  storage.py  urls.py  utils.py  views.py
app/web/documents/: forms.py  models.py  urls.py  views.py
app/web/feedback/: forms.py  urls.py  views.py
app/web/forms/: forms.py  statics.py  utils.py  views.py  widgets.py
app/web/organizations/: admin.py  forms.py  models.py  views.py
app/web/profiles/: admin.py  models.py
app/web/timeline/: admin.py  forms.py  models.py
app/web/users/: admin.py  auth.py  forms.py  managers.py  middleware.py  models.py  urls.py  utils.py  views.py
(+98 files in other folders)
